# python-uv-server

./: LICENSE  Makefile  README.md  main.py  pyproject.toml
db/: connection.py
db/migrations/: alembic.ini
db/migrations/alembic/: env.py
db/migrations/alembic/versions/: 52d449a57517_create_initial_tables.py  e2a7d3ea7a4d_testmigration.py
db/models/: api_models.py  seed.py
db/queries/: api_queries.py
db/queries/tests/: test_api_queries.py
routers/: items.py  users.py
